# crud-api-rust

./: Cargo.toml  README.md
migrations/: 001_users_table.sql  002_books_table.sql
src/: main.rs
src/database/: connect.rs
src/handlers/: book.rs  jwt_handler.rs  mod.rs  token.rs  user.rs
src/middleware/: authenticate.rs
src/models/: book.rs  mod.rs  transaction.rs  user.rs
src/schemas/: book.rs  user.rs
