[package]
name = "books-resale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
bcrypt = "0.14.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
oauth2 = "4.4.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.0", features = ["derive"] }
